[gd_scene load_steps=10 format=3 uid="uid://b0yvl5pcsbc85"]

[ext_resource type="Texture2D" uid="uid://7pvl40x07jap" path="res://pictures/player.png" id="1_kelma"]
[ext_resource type="Script" uid="uid://8dvtw4jforhq" path="res://Scene/player.gd" id="1_y8w33"]
[ext_resource type="StyleBox" uid="uid://cngrsl557yw4d" path="res://theme/blood_background.tres" id="3_58ae2"]
[ext_resource type="StyleBox" uid="uid://1ufoqlix7gwu" path="res://theme/blood_fill.tres" id="4_ivevv"]
[ext_resource type="AudioStream" uid="uid://dbxyx0jt6drhd" path="res://music/game_over.ogg" id="5_ivevv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y8w33"]
radius = 24.0208

[sub_resource type="Animation" id="Animation_r6jsd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ivevv"]
resource_name = "hurt"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6qlh"]
_data = {
&"RESET": SubResource("Animation_r6jsd"),
&"hurt": SubResource("Animation_ivevv")
}

[node name="Player" type="Area2D"]
script = ExtResource("1_y8w33")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kelma")

[node name="eye" type="ColorRect" parent="Sprite2D"]
offset_left = 13.0
offset_top = -8.0
offset_right = 22.0
offset_bottom = 8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_y8w33")

[node name="blood_process" type="ProgressBar" parent="."]
offset_left = -46.0
offset_top = 40.0
offset_right = 42.0
offset_bottom = 58.0
rotation = -1.5708
theme_override_font_sizes/font_size = 11
theme_override_styles/background = ExtResource("3_58ae2")
theme_override_styles/fill = ExtResource("4_ivevv")
value = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p6qlh")
}

[node name="game_over" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_ivevv")
volume_db = 5.0

[node name="Label" type="Label" parent="."]
offset_left = -18.0
offset_top = 20.0
offset_right = 21.0
offset_bottom = 47.0
rotation = -1.57079
theme_override_colors/font_color = Color(0.191406, 0.222992, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "圆形"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
